<resources>
    <string name="app_name">Add Notes</string>
    <string name="action_settings">Settings</string>
    <string name="backgroundColor">background</string>
    <string name="textColor">textColor</string>
    <string name="colorTextDefault">#000000</string>
    <string name="colorDefaultBackground">#CADFE6</string>
    <string name="alertMe">Alert Me</string>
    <string name="alertDefaultValue">NO</string>
    <string name="changesSave">Your changes will not be saved..</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="broadcastSent">addnote.vnps.addnotes.editnotes.view.BroadcastManager</string>
    <string name="deleteDialog">Do you want to delete..</string>
    <string name="alarm">Alarm</string>
    <string name="both">Both</string>
    <string name="theme">Theme</string>
    <string name="fontChange">Font change</string>
    <string name="redYellow">redYellow</string>
    <string name="orangeRed">orangeRed</string>
    <string name="purpleGreen">purpleGreen</string>
    <string name="pinkYellow">pinkYellow</string>
    <string name="greenBrown">greenBrown</string>
    <string name="blue">blue</string>
    <string name="pink_hello_kitty">helloKitty</string>
    <string name="orange">orange</string>
    <string name="deepPurple">deepPurple</string>
    <string name="blackRed">blackRed</string>
    <string name="neonBlue">neonBlue</string>
    <string name="whiteJoker">whiteJoker</string>
    <string name="fontSet">Select your font</string>
    <string name="external_dir">GetSignature</string>
    <string name="lock_this_note">Lock this note?</string>
    <string name="unLock_this_note">UnLock this note?</string>
    <string name="uploading">Uploading your notes. Please wait...</string>
    <string name="downloading">Downloading your notes. Please wait...</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="get_notes">Get Notes</string>
    <string name="sign_in">Sign In</string>
    <string name="fonts">Fonts</string>
    <string name="lock_note">Lock note</string>
    <string name="previousnotes">Your previously uploaded notes will be replaced . Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shopping_value">"Value:  "</string>
    <string name="shopping_amount">"Amount: "</string>
    <string name="shopping_count">"Count:  "</string>
    <string name="json_Shopping_Array">shoppingArray</string>
    <string name="shopping_total_amount">"Total Amount: %d"</string>

    <string name="Version">Version 1.1</string>
    <string name="copyright1">Copyright © 2016 VNPS</string>
    <string name="copyright2">All rights reserved.</string>
    <string name="copyright3">Images used belong to their respective owners.</string>
    <string name="version_number">Version </string>
    <string name="thanks_you_for_your_support">Thank you for your support.</string>

    <string name="APP_KEY">b6btg28rya3e792</string>
    <string name="welcome_themes">Themes</string>
    <string name="welcome_dropbox">Dropbox</string>
    <string name="welcome_got_it">Got It..</string>
    <string name="welcome_share_notes">Share Notes</string>
    <string name="welcome_delete_notes">Delete Notes</string>
    <string name="welcome_add_notes">Add Notes</string>
</resources>
