<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/version"
        android:text="@string/Version"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/version"
        android:id="@+id/copyright2"
        android:text="@string/copyright1"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/copyright2"
        android:id="@+id/copyright3"
        android:text="@string/copyright2"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/copyright3"
        android:id="@+id/copyright4"
        android:text="@string/copyright3"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

</RelativeLayout>