<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyleMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNotesViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/margin_dialog_top"
            android:layout_marginRight="3dp"
            android:text="@string/changesSave"
            android:textSize="@dimen/dialog_text_size" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/tvNotesViewText"
            android:layout_marginLeft="@dimen/margin_left_button_one"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/brightBlueDialog"
            android:textSize="@dimen/dialog_text_size" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/tvNotesViewText"
            android:layout_marginLeft="@dimen/margin_button_left"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/brightBlueDialog"
            android:textSize="@dimen/dialog_text_size" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
